Nå har jeg lagt til et css dukoment sånn at siden ser finere ut

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 
@@ -84,7 +85,7 @@
   <input type="text" list="bilModelList" id="bilModel" name="bilModel"  required></br></br>
   <datalist id="bilModelList"></datalist>
 
-  <button type="button" onclick="addProdukt()">Legg til produkt</button>
+  <button type="button" onclick="addProdukt()">Registrer</button>
 </form>
 
 <h2>Motorvognregister</h2>
